@@ -5,6 +5,7 @@ V0.15-svn (development)
 * Refactored the display of extra information (in the info panel) to be
   much more general, to allow more things to be displayed
 * Album covers now show the cover when they are selected
+* Genre and duration now show for tracks in the info panel
 V0.15 2006-01-04
 * The display for the title and download status no longer gets ugly when the 
   title is long. Now the download status will always be displayed, and the title 
